samples/_failures_safe/1761513415_3f5430_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_50d98de3.c: In function ‘main’:
./samples/SAFE/__tmp_50d98de3.c:174: error: expected ‘}’ at end of input
./samples/SAFE/__tmp_50d98de3.c:173:45: note: to match this ‘{’
  173 |     int edges[][3] = {{0, 1, 1}, {0, 2, 1}, {1, 3, 1
      |                                             ^
./samples/SAFE/__tmp_50d98de3.c:173:5: error: expected declaration or statement at end of input
  173 |     int edges[][3] = {{0, 1, 1}, {0, 2, 1}, {1, 3, 1
      |     ^~~
